appId: com.saucelabs.mydemoapp.android
name: submitting without a password shows a validation error
---
- runFlow: ../common/launch.yaml
- runFlow: ../common/open_login.yaml
- tapOn:
    id: "nameET"
- inputText: "bob@example.com"
- hideKeyboard
- tapOn:
    text: "Tap to login with given credentials"
- assertVisible:
    id: "passwordErrorTV"
    text: "Enter Password"
